Обновление Транзакций, счетов. - исправлены ошибки чейнжлога - добавлены поля категорий. Изменен тип полей времени. Добавлено поле для мягкого удаления - в контроллерах добавились эндпоинты обновления и удаления, для счетов и транзакций - добавление новых категорий доступно только ADMIN_ROLE - для отчета за месяц добавлено поле разницы - в сервисе отчета времени изменен порок месяца, проверка теперь идет проверкой, что позже следующего месяца, при LocalTime.MAX была ошибка конвертации. - изменены LocalDate на Instant - отредактированы тесты согласно изменениям - добавлен конфиг RestTemplate с таймаутами -
