# src/main/java/ru/yandex/finance_tracker/controller/ReportController.java
@@ -1,12 +1,12 @@
 package ru.yandex.finance_tracker.controller;
 
-import jakarta.validation.constraints.Max;
-import jakarta.validation.constraints.Min;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
+import ru.yandex.finance_tracker.dto.inner.GetMonthlyReportParam;
 import ru.yandex.finance_tracker.dto.output.MonthlyReportDto;
 import ru.yandex.finance_tracker.security.dto.AuthInfo;
 import ru.yandex.finance_tracker.service.ReportService;
@@ -20,9 +20,9 @@ public class ReportController {
 
     @GetMapping("/monthly")
     @ResponseStatus(HttpStatus.OK)
-    public MonthlyReportDto getMonthlyReport(@RequestParam @Min(2000) @Max(2100) int year,
-                                             @RequestParam @Min(1) @Max(12) int month,
-                                             @AuthenticationPrincipal AuthInfo authInfo) {
-        return reportService.getMonthlyReport(authInfo.getId(), year, month);
+    public MonthlyReportDto getMonthlyReport(
+            @ModelAttribute @Valid GetMonthlyReportParam param,
+            @AuthenticationPrincipal AuthInfo authInfo) {
+        return reportService.getMonthlyReport(authInfo.getId(), param.getYear(), param.getMonth());
     }
 }
