# src/main/java/ru/yandex/finance_tracker/controller/TransactionController.java
@@ -2,6 +2,7 @@ package ru.yandex.finance_tracker.controller;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.validator.constraints.UUID;
@@ -10,6 +11,7 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.finance_tracker.dto.input.TransactionRequest;
+import ru.yandex.finance_tracker.dto.input.TransactionUpdateRequest;
 import ru.yandex.finance_tracker.dto.output.TransactionInfoDto;
 import ru.yandex.finance_tracker.exception.*;
 import ru.yandex.finance_tracker.idempotency.IdempotencyService;
@@ -31,7 +33,6 @@ public class TransactionController {
     @ResponseStatus(HttpStatus.CREATED)
     public TransactionInfoDto createTransaction(@Valid @RequestBody TransactionRequest request,
                                                 @AuthenticationPrincipal AuthInfo authInfo,
-
                                                 @NotBlank(message = "Idempotency key is required")
                                                 @UUID(message = "Idempotency key must have UUID format")
                                                 @RequestHeader(value = "X-Idempotency-Key") String iKey) {
@@ -63,5 +64,22 @@ public class TransactionController {
             idempotencyService.unlock(iKey);
             throw new ServerErrorException("Fail during transaction operation");
         }
+    }
+
+    @PutMapping("/{transactionId}")
+    @ResponseStatus(HttpStatus.OK)
+    public TransactionInfoDto updateTransaction(@PathVariable(name = "transactionId") @Positive Long transactionId,
+                                                @Valid @RequestBody TransactionUpdateRequest request,
+                                                @AuthenticationPrincipal AuthInfo authInfo) {
+        log.info("Запрос PUT /v1/transactions/{} от userid={}", transactionId, authInfo.getId());
+        return transactionService.updateTransaction(authInfo.getId(), transactionId, request);
+    }
+
+    @DeleteMapping("/{transactionId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteTransaction(@PathVariable(name = "transactionId") @Positive Long transactionId,
+                                  @AuthenticationPrincipal AuthInfo authInfo) {
+        log.info("Запрос DELETE /v1/transactions/{} от userid={}", transactionId, authInfo.getId());
+        transactionService.deleteTransaction(authInfo.getId(), transactionId);
     }
 }
